# BoxPruning

./: CMakeLists.txt  exec.sh
BoxPruning1/: BoxPruning.cpp  IceBoxPruning.cpp
BoxPruning10/: IceBoxPruning.cpp
BoxPruning11/: IceBoxPruning.cpp
BoxPruning11_STL/: IceBoxPruning.cpp  StdAfx.h
BoxPruning11_VC10/: BoxPruning.cpp  IceBoxPruning.cpp  StdAfx.h
BoxPruning11_VC14/: IceBoxPruning.cpp
BoxPruning12/: IceBoxPruning.cpp
BoxPruning13/: IceBoxPruning.cpp  StdAfx.cpp
BoxPruning14a/: IceBoxPruning.cpp
BoxPruning14b_Ryg/: BoxPruning.cpp  IceBoxPruning.cpp
BoxPruning14c/: IceBoxPruning.cpp
BoxPruning14d/: IceBoxPruning.cpp
BoxPruning2/: BoxPruning.cpp  IceBoxPruning.cpp
BoxPruning3/: IceBoxPruning.cpp
BoxPruning4/: IceBoxPruning.cpp  StdAfx.h
BoxPruning5/: IceBoxPruning.cpp  StdAfx.h
BoxPruning6a/: BoxPruning.cpp  IceBoxPruning.cpp
BoxPruning6b/: IceBoxPruning.cpp
BoxPruning7/: IceBoxPruning.cpp
BoxPruning8/: IceBoxPruning.cpp
BoxPruning9a/: IceBoxPruning.cpp
BoxPruning9b/: BoxPruning.cpp  IceBoxPruning.cpp  StdAfx.h
BoxPruning9c/: IceBoxPruning.cpp
Shared/: IceBoxPruning_BruteForce.cpp  IceContainer.cpp  IceFPU.h  IceProfiler.cpp  IceProfiler.h  IceRevisitedRadix.cpp  IceTypes.h  Main.cpp  StdAfx.h
